# to-do-backend

./: .gitignore  Procfile  main.py  pyproject.toml
to_do_backend/: asgi.py  settings.py  urls.py  wsgi.py
todo_api/: models.py  serializers.py  urls.py  views.py
todo_api/migrations/: 0001_initial.py  0002_tags_tasks_tag.py  0003_rename_tag_tasks_tags.py
